<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_stats"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/title_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_yourreports"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/title_yourreports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stats" />

    <Button
        android:id="@+id/btn_faq"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/title_faq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_yourreports" />

    <Button
        android:id="@+id/btn_privacy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/title_privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_faq" />

    <Button
        android:id="@+id/btn_contactus"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/title_contactus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_privacy" />

    <TextView
        android:id="@+id/cpright_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contactus" />


</androidx.constraintlayout.widget.ConstraintLayout>