<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:id="@+id/locationItems"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtDescription">

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/title_location"
            android:gravity="center_vertical"
            android:background="#E6E6E6"
            android:layout_gravity="center"
            android:textColor="#000000"

            android:paddingHorizontal="3dp"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnGetLocation"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/my_location_btn"/>

        <Button
            android:id="@+id/btnSetLocation"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/specific_location_btn"/>

    </LinearLayout>

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:textColor="#000000"
        android:background="#E6E6E6"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/desc_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <LinearLayout
        android:id="@+id/cameraNnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/txtDescription"
        app:layout_constraintBottom_toTopOf="@id/swSheltered"
        android:weightSum="3">


        <EditText
            android:id="@+id/txtNum"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="45dp"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            android:importantForAutofill="no"
            android:hint="@string/people_cnt_hint"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_camera"/>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swSheltered"
        android:theme="@style/MySwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:switchPadding="20dp"
        android:text="@string/shelterSwitch"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/cameraNnum"
        app:layout_constraintBottom_toTopOf="@id/btnReport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnReport"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:padding="10dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:ems="10"
        android:textColor="@color/white"
        android:background="@drawable/submit_btn"
        app:layout_constraintTop_toBottomOf="@id/swSheltered"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>